Wed Feb  4 06:15:21 2004  Tim Janik  <timj@gtk.org>

	* distcheck fixes.

	* beast-gtk/Makefile.am: added dependancies for bsegentypes.[hc]
	on sfidl. turned source file dependancies on generated files
	into obejct file dependancies, so make can get it's VPATHs right.
	don't ship build files anymore (since all tools should be
	available at build time to generate them), generate build files
	in the build directory. INCLUDE fixes.

	* plugins/evaluator/Makefile.am:
	* plugins/Makefile.am:
	* bsw/Makefile.am:
	* bse/Makefile.am: use sfidl instead of bse-plugin-generator, fix
	idl includes.

	* beast-gtk/bstmain.c: added new language translators to about box.
	
	* docs/site-development.texi: updated translation links.
	
	* NEWS: announce translations.
	
Wed Feb  4 00:07:12 2004  Tim Janik  <timj@gtk.org>

	* applied fixes suggested by Sam Hocevar <sam@zoy.org>.

	* bse/Makefile.am: add libsfi.la to libbse.la ldadd,
	since we use libtool-1.5 now.

	* bsw/Makefile.am: add libbse.la to libbsw.la ldadd.

Mon Feb  2 16:17:46 2004  Tim Janik  <timj@gtk.org>

	* configure.in: version update to 0.5.7rc1, binary 0, interface 0.

Mon Feb  2 02:06:49 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstrecords.idl: fixed typo.

	* biogreen.skin:
	* images/biogreen.jpg: added skin.

Mon Feb  2 00:30:19 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkimagecache.c: set cache size to 0, this frees
	pixmaps as soon as they are unused.

	* beast-gtk/gxk/gxkscrollcanvas.c: fixed list removal bug that
	caused crashes on skin updates.

	* library/skins/blueimpress.skin:
	* library/skins/brownforms.skin:
	* library/skins/silvervein.skin:
	* library/skins/images/blueimpress.jpg:
	* library/skins/images/brownforms.jpg:
	* library/skins/images/silvervein.png: added new skins.

Sun Feb  1 18:38:15 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.[hc]: provide action list for available skins.

	* beast-gtk/dialogs/gadgets-beast.xml: put skin actions
	under View/Skins.
